{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 9,
  "lineage": "33693448-0d71-0151-c191-7f4693eff12e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:internet-gateway/igw-0aa2d307eba114053",
            "id": "igw-0aa2d307eba114053",
            "owner_id": "979426164612",
            "vpc_id": "vpc-0123f72ac2e999f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public-crt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010c49dd93eb18fe2",
            "owner_id": "979426164612",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa2d307eba114053",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0123f72ac2e999f63"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00334c3c4d5a07b3f",
            "route_table_id": "rtb-010c49dd93eb18fe2",
            "subnet_id": "subnet-0fe157df6170d8be9"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-public-crt",
            "aws_subnet.dev-subnet-public-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015a02672f71530f0",
            "route_table_id": "rtb-010c49dd93eb18fe2",
            "subnet_id": "subnet-07428f83c2d0ba48c"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-public-crt",
            "aws_subnet.dev-subnet-public-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:security-group/sg-0e9fc276d543285b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9fc276d543285b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210306102154161700000001",
            "name_prefix": "terraform-",
            "owner_id": "979426164612",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pokemon-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0123f72ac2e999f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:subnet/subnet-0fe157df6170d8be9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fe157df6170d8be9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979426164612",
            "vpc_id": "vpc-0123f72ac2e999f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:subnet/subnet-07428f83c2d0ba48c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07428f83c2d0ba48c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979426164612",
            "vpc_id": "vpc-0123f72ac2e999f63"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:vpc/vpc-0123f72ac2e999f63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090ef75a2c0d49bca",
            "default_route_table_id": "rtb-0cf3e1d1f22d3bf1e",
            "default_security_group_id": "sg-015eb56803b2497b4",
            "dhcp_options_id": "dopt-32b01648",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0123f72ac2e999f63",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cf3e1d1f22d3bf1e",
            "owner_id": "979426164612",
            "tags": {
              "Name": "pokemon-vpc"
            }
          }
        }
      ]
    }
  ]
}